# invoice-ocr-demo

./: .env.example  .gitignore  README.md  app.py  field_config.json  field_config_ui.py  field_manager.py  ocr_pipeline.py  pyproject.toml  requirements.txt  run_demo.py  start_demo.bat
.streamlit/: config.toml  secrets.toml.template
front_end_app/: app.py  ocr_pipeline.py  requirements.txt  streamlit_app.py
front_end_app/.streamlit/: config.toml
front_end_app/templates/: results.html  upload.html
